<resources>
    <string name="app_name">EasyFood</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_email">Enter Email</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_tv">Sign up</string>
    <string name="loginBtn">Login</string>
    <string name="enter_password">Enter Password</string>
    <string name="instructionsTV">Instructions:</string>
</resources>